# aether

./: Cargo.toml  LICENSE-MIT  Makefile  README.md
docs/: 01_ARCHITECTURE_AND_VISION.md  02_SUBSYSTEMS_AND_ECOSYSTEM.md  03_HYPERCALL_ABI_SPEC.md  04_ENGINEERING_AND_CONTRIBUTING.md  05_STATUS_AND_ROADMAP.md  README.md
guests/init_domain/: Cargo.toml  build.rs  link.x
guests/init_domain/src/: main.rs
guests/macro_domain/: Cargo.toml  build.rs  link.x
guests/macro_domain/src/: main.rs
scripts/: build-guest.sh  run-qemu.sh
spec/: msb_transfer.tla
src/: boot_validator.rs  coherence.rs  guest.rs  lib.rs  percpu.rs  serial.rs  vga_buffer.rs
src/arch/: mod.rs
src/arch/x86_64/: apic.rs  boot.S  grub.cfg  guest.S  linker.ld  long_mode_init.S  mod.rs  multiboot_header.S  virtualization.rs
src/arch/x86_64/iommu/: audit.rs  directory.rs  manager.rs  mod.rs  tables.rs  types.rs
src/arch/x86_64/svm/: mod.rs
src/arch/x86_64/vmx/: controls.rs  exit.rs  guest.rs  host.rs  instructions.rs  mod.rs  vmcs.rs
src/enclave/: manager.rs  mod.rs  state.rs
src/fusion/: mod.rs  virtio.rs
src/memory/: boot.rs  buddy.rs  ept.rs  frame.rs  heap.rs  mod.rs  utils.rs
src/mmdl/: mod.rs
src/msb/: cap.rs  mod.rs
src/vm/: exit.rs  mod.rs
src/vm/fs/: mod.rs  procfs.rs
src/vm/hypercall/: device.rs  enclave.rs  extensions.rs  interrupt.rs  memory.rs  mod.rs  system.rs  types.rs  utils.rs
src/vm/syscall/: linux.rs
src/vm/vmx/: controls.rs  guest.rs  host.rs  mod.rs
