[package]
name = "aether"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
multiboot2 = { version = "0.24.1", default-features = false }
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
uart_16550 = "0.2.0"
x86_64 = "0.14.10"
bitflags = "2.4.0"
raw-cpuid = "10.7.0"
linked_list_allocator = "0.10.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
[profile.release.package.init_domain]
opt-level = "s"
[profile.release.package.macro_domain]
opt-level = "s"

[workspace]
members =[".", "guests/init_domain", "guests/macro_domain"]
default-members =[".", "guests/init_domain", "guests/macro_domain"]
resolver = "2"